feat: add language section

--- a/index.html
+++ b/index.html
@@ -50,13 +50,17 @@
             reading JavaScript books and practicing coding tasks. Im self-motivated, detail-oriented, and eager to grow as a developer.</p> 
         </header>
         <aside class="left-column-section">     
-            <div id="skills" class="bold"><h2 id="knowledge-text">Knowledge</h2>
+            <div class="skills bold"><h2 id="knowledge-text">Knowledge</h2>
                 <p>Git</p><div class="progress-bar"><div class="git">~50%</div></div>
                 <p>HTML</p><div class="progress-bar"><div class="html">~80%</div></div>
                 <p>CSS</p><div class="progress-bar"><div class="css">~60%</div></div>
                 <p>SQL</p><div class="progress-bar"><div class="sql">30%</div></div>
                 <p>JavaScript</p><div class="progress-bar"><div class="js">~1%</div></div>
-                <p>TypeScript</p><div class="progress-bar"><div class="ts">0%</div></div>
+            </div>
+            <div class="skills bold"><h2 id="languages-text">Languages</h2>
+                <p>Russian</p><p class="language-level">Proficiency - C2</p><div class="progress-bar"><div class="russian"></div></div>
+                <p>Ukrainian</p><p class="language-level">Advanced - C1</p><div class="progress-bar"><div class="ukrainian"></div></div>
+                <p>English</p><p class="language-level">Intermediate - B1+</p><div class="progress-bar"><div class="english"></div></div>
             </div>
             <div id="contacts" class="bold">
                 <h2 id="contacts-text">Contacts</h2>
