fix: fix anchor for skills button

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             reading JavaScript books and practicing coding tasks. Im self-motivated, detail-oriented, and eager to grow as a developer.</p> 
         </header>
         <aside class="left-column-section">     
-            <div class="skills bold"><h2 id="knowledge-text">Knowledge</h2>
+            <div class="skills bold" id="skills"><h2 id="knowledge-text">Knowledge</h2>
                 <p>Git</p><div class="progress-bar"><div class="git">~50%</div></div>
                 <p>HTML</p><div class="progress-bar"><div class="html">~80%</div></div>
                 <p>CSS</p><div class="progress-bar"><div class="css">~60%</div></div>
